# llm-challenge

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  eval.py  fetch.py  ingest.py  pyproject.toml  rag.py  requirements.txt
data/: jokes.json  sample.txt
templates/: index.html
